fixed query url building